Refactor HttpUrlConnection to use RestTemplate